base model (starting point)

--- a/3_train_model.ipynb
+++ b/3_train_model.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "1449c74a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kero\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -79,19 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "057df30a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'LABEL_MAPPING_PATH' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Cell 2 – Rebuild num_classes, datasets and dataloaders from JSON\u001b[39;00m\n\u001b[32m      2\u001b[39m \n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# --- Load metadata ---\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mLABEL_MAPPING_PATH\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      5\u001b[39m     label_mapping = json.load(f)\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(DATASET_INDEX_PATH, \u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "\u001b[31mNameError\u001b[39m: name 'LABEL_MAPPING_PATH' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of classes: 39\n",
+      "Number of samples in dataset_index: 55448\n",
+      "Field-poor classes: 39\n",
+      "Train: 44343 Val: 5542 Test: 5563\n",
+      "Batches -> Train: 1386 Val: 174 Test: 174\n"
      ]
     }
    ],
@@ -147,8 +139,8 @@
     "        translate=(0.1, 0.1),\n",
     "        scale=(0.8, 1.2)\n",
     "    ),\n",
-    "    T.RandomErasing(p=0.3, scale=(0.02, 0.15), ratio=(0.3, 3.3)),\n",
     "    T.ToTensor(),\n",
+    "    T.RandomErasing(p=0.3, scale=(0.02, 0.15), ratio=(0.3, 3.3)),\n",
     "    T.Normalize(mean=IMAGENET_MEAN, std=IMAGENET_STD),\n",
     "])\n",
     "\n",
@@ -235,7 +227,7 @@
     "    val_dataset,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle=False,\n",
-    "    num_workers=4,\n",
+    "    num_workers=0,\n",
     "    pin_memory=True\n",
     ")\n",
     "\n",
@@ -243,7 +235,7 @@
     "    test_dataset,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle=False,\n",
-    "    num_workers=4,\n",
+    "    num_workers=0,\n",
     "    pin_memory=True\n",
     ")\n",
     "\n",
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "5508bf71",
    "metadata": {},
    "outputs": [],
@@ -271,7 +263,11 @@
     "    all_targets = []\n",
     "    all_preds = []\n",
     "\n",
-    "    for images, targets in loader:\n",
+    "    for batch_idx, (images, targets) in enumerate(loader):\n",
+    "        # DEBUG: print every 50 batches\n",
+    "        if batch_idx % 50 == 0:\n",
+    "            print(f\"  [train] batch {batch_idx}/{len(loader)}\")\n",
+    "\n",
     "        images = images.to(device, non_blocking=True)\n",
     "        targets = targets.to(device, non_blocking=True)\n",
     "\n",
@@ -295,6 +291,7 @@
     "    epoch_f1 = f1_score(all_targets, all_preds, average=\"macro\")\n",
     "\n",
     "    return epoch_loss, epoch_acc, epoch_f1\n",
+    "\n",
     "\n",
     "\n",
     "@torch.no_grad()\n",
@@ -337,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "d20eea31",
    "metadata": {},
    "outputs": [],
@@ -348,16 +345,13 @@
     "    \"\"\"\n",
     "    model = timm.create_model(\n",
     "        model_name,\n",
-    "        pretrained=True,\n",
+    "        pretrained=False,    # keep False for now so it doesn't try to download weights\n",
     "        num_classes=num_classes\n",
     "    )\n",
     "\n",
     "    model.to(device)\n",
     "\n",
-    "    # You can also set different learning rates for backbone/head if you want.\n",
     "    optimizer = AdamW(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
-    "\n",
-    "    # Set T_max to something like number of epochs\n",
     "    scheduler = CosineAnnealingLR(optimizer, T_max=20)\n",
     "\n",
     "    criterion = nn.CrossEntropyLoss()\n",
@@ -375,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "e53438b3",
    "metadata": {},
    "outputs": [],
@@ -392,6 +386,7 @@
     "    early_stopping_patience=5\n",
     "):\n",
     "    print(f\"Starting training for model: {model_name}\")\n",
+    "    print(\"  -> Creating model and optimizer...\")\n",
     "\n",
     "    model, criterion, optimizer, scheduler = create_model_and_optim(\n",
     "        model_name=model_name,\n",
@@ -400,6 +395,8 @@
     "        weight_decay=weight_decay,\n",
     "        device=device\n",
     "    )\n",
+    "\n",
+    "    print(\"  -> Model created, starting epochs...\")\n",
     "\n",
     "    best_val_f1 = -1.0\n",
     "    best_state = None\n",
@@ -441,7 +438,7 @@
     "            f\"time: {elapsed:.1f}s\"\n",
     "        )\n",
     "\n",
-    "        # Save best model by validation macro F1\n",
+    "        # Track best by validation macro F1\n",
     "        if val_f1 > best_val_f1:\n",
     "            best_val_f1 = val_f1\n",
     "            best_state = copy.deepcopy(model.state_dict())\n",
@@ -455,7 +452,7 @@
     "            print(\"Early stopping triggered.\")\n",
     "            break\n",
     "\n",
-    "    # Restore best weights\n",
+    "    # Restore best weights if we have them\n",
     "    if best_state is not None:\n",
     "        model.load_state_dict(best_state)\n",
     "\n",
@@ -470,6 +467,7 @@
     "    }, ckpt_path)\n",
     "    print(f\"Saved best checkpoint to: {ckpt_path}\")\n",
     "\n",
+    "    # IMPORTANT: actually return values\n",
     "    return model, history, best_val_f1\n"
    ]
   },
@@ -491,12 +489,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting training for model: efficientnet_b0\n"
+      "Starting training for model: efficientnet_b0\n",
+      "  -> Creating model and optimizer...\n",
+      "  -> Model created, starting epochs...\n",
+      "  [train] batch 0/1386\n",
+      "  [train] batch 50/1386\n",
+      "  [train] batch 100/1386\n",
+      "  [train] batch 150/1386\n",
+      "  [train] batch 200/1386\n",
+      "  [train] batch 250/1386\n",
+      "  [train] batch 300/1386\n",
+      "  [train] batch 350/1386\n",
+      "  [train] batch 400/1386\n",
+      "  [train] batch 450/1386\n",
+      "  [train] batch 500/1386\n",
+      "  [train] batch 550/1386\n",
+      "  [train] batch 600/1386\n",
+      "  [train] batch 650/1386\n",
+      "  [train] batch 700/1386\n",
+      "  [train] batch 750/1386\n",
+      "  [train] batch 800/1386\n",
+      "  [train] batch 850/1386\n",
+      "  [train] batch 900/1386\n",
+      "  [train] batch 950/1386\n",
+      "  [train] batch 1000/1386\n",
+      "  [train] batch 1050/1386\n",
+      "  [train] batch 1100/1386\n",
+      "  [train] batch 1150/1386\n",
+      "  [train] batch 1200/1386\n",
+      "  [train] batch 1250/1386\n",
+      "  [train] batch 1300/1386\n",
+      "  [train] batch 1350/1386\n",
+      "Epoch 01 | Train loss: 2.1528, acc: 0.401, F1: 0.395 | Val loss: 0.6751, acc: 0.790, F1: 0.734 | time: 377.4s\n",
+      "New best val F1: 0.7344\n",
+      "  [train] batch 0/1386\n",
+      "  [train] batch 50/1386\n",
+      "  [train] batch 100/1386\n",
+      "  [train] batch 150/1386\n",
+      "  [train] batch 200/1386\n",
+      "  [train] batch 250/1386\n",
+      "  [train] batch 300/1386\n",
+      "  [train] batch 350/1386\n",
+      "  [train] batch 400/1386\n",
+      "  [train] batch 450/1386\n",
+      "  [train] batch 500/1386\n",
+      "  [train] batch 550/1386\n",
+      "  [train] batch 600/1386\n",
+      "  [train] batch 650/1386\n",
+      "  [train] batch 700/1386\n",
+      "  [train] batch 750/1386\n",
+      "  [train] batch 800/1386\n",
+      "  [train] batch 850/1386\n",
+      "  [train] batch 900/1386\n",
+      "  [train] batch 950/1386\n",
+      "  [train] batch 1000/1386\n",
+      "  [train] batch 1050/1386\n",
+      "  [train] batch 1100/1386\n",
+      "  [train] batch 1150/1386\n",
+      "  [train] batch 1200/1386\n",
+      "  [train] batch 1250/1386\n",
+      "  [train] batch 1300/1386\n",
+      "  [train] batch 1350/1386\n",
+      "Epoch 02 | Train loss: 0.8829, acc: 0.725, F1: 0.723 | Val loss: 0.3726, acc: 0.876, F1: 0.839 | time: 243.9s\n",
+      "New best val F1: 0.8395\n",
+      "  [train] batch 0/1386\n",
+      "  [train] batch 50/1386\n",
+      "  [train] batch 100/1386\n",
+      "  [train] batch 150/1386\n",
+      "  [train] batch 200/1386\n",
+      "  [train] batch 250/1386\n",
+      "  [train] batch 300/1386\n",
+      "  [train] batch 350/1386\n",
+      "  [train] batch 400/1386\n",
+      "  [train] batch 450/1386\n",
+      "  [train] batch 500/1386\n",
+      "  [train] batch 550/1386\n",
+      "  [train] batch 600/1386\n",
+      "  [train] batch 650/1386\n",
+      "  [train] batch 700/1386\n",
+      "  [train] batch 750/1386\n",
+      "  [train] batch 800/1386\n",
+      "  [train] batch 850/1386\n",
+      "  [train] batch 900/1386\n",
+      "  [train] batch 950/1386\n",
+      "  [train] batch 1000/1386\n",
+      "  [train] batch 1050/1386\n",
+      "  [train] batch 1100/1386\n",
+      "  [train] batch 1150/1386\n",
+      "  [train] batch 1200/1386\n",
+      "  [train] batch 1250/1386\n",
+      "  [train] batch 1300/1386\n",
+      "  [train] batch 1350/1386\n",
+      "Epoch 03 | Train loss: 0.5441, acc: 0.826, F1: 0.825 | Val loss: 0.2463, acc: 0.917, F1: 0.899 | time: 221.4s\n",
+      "New best val F1: 0.8989\n",
+      "  [train] batch 0/1386\n",
+      "  [train] batch 50/1386\n",
+      "  [train] batch 100/1386\n"
      ]
     }
    ],
    "source": [
-    "# Example: EfficientNet-B0\n",
     "eff_name = \"efficientnet_b0\"\n",
     "\n",
     "model_eff, history_eff, best_val_f1_eff = train_model(\n",
