--- a/2_dataset_and_augmentations.ipynb
+++ b/2_dataset_and_augmentations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "27738a3e",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "f81568fd",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "bf3523e9",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "99c88f72",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "033a0d7d",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "2e687153",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "435c5a4f",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "2f17ecb7",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "6f9cdbac",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "4e165871",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "be4133da",
    "metadata": {},
    "outputs": [],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "b6879a87",
    "metadata": {},
    "outputs": [
@@ -579,8 +579,8 @@
      "text": [
       "Batch image tensor shape: torch.Size([32, 3, 224, 224])\n",
       "Batch targets shape: torch.Size([32])\n",
-      "Unique labels in this batch: tensor([ 0,  3,  4,  6,  9, 10, 12, 13, 16, 17, 18, 20, 21, 23, 25, 26, 31, 32,\n",
-      "        34, 36, 38])\n"
+      "Unique labels in this batch: tensor([ 3,  5,  7, 10, 12, 13, 14, 16, 18, 19, 20, 23, 25, 27, 29, 30, 31, 34,\n",
+      "        35, 38])\n"
      ]
     }
    ],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "39c5296e",
    "metadata": {},
    "outputs": [
@@ -602,11 +602,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time for one batch: 0.2601644992828369\n",
+      "time for one batch: 0.2653615474700928\n",
       "Batch image tensor shape: torch.Size([32, 3, 224, 224])\n",
       "Batch targets shape: torch.Size([32])\n",
-      "Unique labels in this batch: tensor([ 2,  3,  4,  5,  7, 10, 14, 16, 19, 20, 21, 25, 26, 28, 31, 34, 35, 36,\n",
-      "        38])\n"
+      "Unique labels in this batch: tensor([ 3, 10, 13, 16, 17, 20, 21, 23, 25, 29, 31, 32, 34, 35, 38])\n"
      ]
     }
    ],
